@@ -1,6 +1,8 @@
 0.12.16
 =======
  * FreeBSD Compile fixes (thanks to Heiner Eichmann)
+ * Always force 44.1khz in the Lame MP3 encoder plugin
+ * Fixed VideoDVD creation on rewritable media.
 
 0.12.15
 =======
